# tweetero-api-rs

./: .env  Cargo.toml  Dockerfile.development  Makefile  docker-compose.yml
migrations/2023-04-21-151407_create_users/: up.sql
src/: lib.rs  main.rs  schema.rs
src/config/: database.rs  mod.rs
src/controllers/: users.rs
src/models/: mod.rs
src/routes/: mod.rs  users.rs
src/services/: users.rs
tests/: health_check.rs
