[package]
name = "tweetero-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tweetero_api"

[dependencies]
actix-web = "^4.3"
chrono = { version = "0.4.24", features = ["serde"] }
deadpool-diesel = { version = "0.4.1", features = ["postgres", "serde"] }
diesel = { version = "2.0.4", features = ["chrono"] }
diesel-async = { version = "0.2.2", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
hyper = { version = "0.14.26", features = ["full"] }
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
